src/test/compile-fail/issue-3680.rs
// xfail-test
fn f() {
    match None {
            Err(_) => () //~ ERROR expected `core::result
    }
}
